# TauriTimeTable

./: README.md  index.html  package.json  pnpm-lock.yaml  t.bat
config/: config.json
script/: data.js  htmlAnalyzer.js  index.js  timeTable.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/script/: crawl.js  crawler.js  data.js  index.js  init.js
stylesheet/: styles.css
timetable/: package.json
